# RigWallet

./: .env.example  .gitignore  Cargo.toml  README.md
rig-wallet/: Cargo.toml
rig-wallet-account/: Cargo.toml
rig-wallet-account/src/: errors.rs  lib.rs  mnemonic.rs  path.rs  types.rs
rig-wallet-account/src/language/: english.rs  mod.rs
rig-wallet-executor/: Cargo.toml
rig-wallet-executor/src/evm/: eip1559.rs  erc20.rs  mod.rs  send.rs
rig-wallet-executor/src/tvm/: mod.rs  native.rs  spl.rs
rig-wallet-macro/: Cargo.toml
rig-wallet-macro/src/: lib.rs  transaction_builder.rs
rig-wallet-tx/: Cargo.toml
rig-wallet-tx/src/eth/: mod.rs
rig-wallet-types/: Cargo.toml
rig-wallet-types/src/: chain_config.rs  errors.rs  lib.rs  request.rs  transaction.rs  wallet.rs
rig-wallet-types/src/signer/: evm.rs  mod.rs
rig-wallet-types/src/wallet/: context.rs  evm.rs  mod.rs  svm.rs
rig-wallet-vm/: Cargo.toml
rig-wallet-vm/src/evm/: eip1559.rs  mod.rs
rig-wallet/examples/: agent_with_eth.rs  agent_with_sol.rs
rig-wallet/src/: lib.rs
rig-wallet/src/eth/: mod.rs
rig-wallet/src/ethereum/: dai.rs  eth.rs  mod.rs  usdc.rs  usdt.rs
rig-wallet/src/solana/: mod.rs  sol.rs  usdc.rs  usdt.rs
