[package]
name = "rig-wallet-account"
version.workspace = true
edition.workspace = true

[dependencies]
hmac = { workspace = true }
sha2 = { workspace = true }
k256 = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
pbkdf2 = { workspace = true }
unicode-normalization = { workspace = true }
zeroize = "1"

[dev-dependencies]
