[package]
name = "rig-wallet-executor"
version.workspace = true
edition.workspace = true

[dependencies]
rig-wallet-types = { workspace = true }
rig-wallet-macro = { workspace = true }
alloy = { workspace = true }
async-trait = { workspace = true }
rig-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-system-interface = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token-interface = { workspace = true }
spl-memo-interface = { workspace = true }
