[package]
name = "rig-wallet-types"
version.workspace = true
edition.workspace = true

[dependencies]
rig-wallet-account = { workspace = true }
rig-wallet-macro = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
alloy = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-program-error = { workspace = true }
solana-address = { workspace = true }
tokio = { workspace = true }
zeroize = "1"
