[package]
name = "rig-wallet-vm"
version.workspace = true
edition.workspace = true

[dependencies]
rig-wallet-types = { workspace = true }
alloy = { workspace = true }
async-trait = { workspace = true }
rig-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
